k8s/Ingress/app-k8s/app-postgresql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-postgresql
  namespace: algo_ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-postgresql
  template:
    metadata:
      labels:
        app: app-postgresql
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: app-postgresql-pvc
      containers:
        - name: postgres
          image: postgres:14.2
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: app-postgresql
  namespace: algo_ns
spec:
  selector:
    app: app-postgresql
  ports:
    - port: 5432
