k8s/Ingress/app-k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: algo_ns
  labels:
    app: app
spec:
  selector:
    app: app
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
