k8s/Ingress/app-k8s/app-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app
  namespace: algo_ns
spec:
  rules:
    - host: app.algo_ns.local.rr.com
      http:
        paths:
          - path: /
            backend:
              serviceName: app
              servicePort: 8080
